fix: fix issue with z-index

--- a/src/app/view/main/catalog/cards/cards-view.css
+++ b/src/app/view/main/catalog/cards/cards-view.css
@@ -48,6 +48,7 @@
 }
 
 .catalog > .catalog-swiper-slider {
+  z-index: 0;
   border: 1px solid red;
   padding: 64px;
   margin: -64px;
