--- a/src/style.css
+++ b/src/style.css
@@ -87,7 +87,7 @@ body {
 .screen-fade {
   content: '';
   position: fixed;
-  z-index: 0;
+  z-index: 30;
   top: 0;
   left: 0;
   right: 0;
